--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 body {
-  background-color: aqua;
+  padding: 20px;
+  background: rgb(151, 12, 214);
+  background: linear-gradient(
+    90deg,
+    rgba(151, 12, 214, 0.5494791666666667) 2%,
+    rgba(2, 0, 36, 0.2217480742296919) 67%,
+    rgba(0, 212, 255, 1) 90%
+  );
+}
+
+ul,
+li {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
 }
